added sqs poller for template changes, updateTemplate endpoint
